src/main/gen/com/github/dweindl/intellijantimony/parser/AntimonyParser.java
// This is a generated file. Not intended for manual editing.
package com.github.dweindl.intellijantimony.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.dweindl.intellijantimony.psi.AntimonyTypes.*;
import static com.github.dweindl.intellijantimony.parser.AntimonyParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AntimonyParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return antimonyFile(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(AND_EXPR, ARITHMETIC_EXPR, COMPARISON_EXPR, EXPR,
      LITERAL_EXPR, LOGICAL_EXPR, MUL_EXPR, NOT_EXPR,
      OR_EXPR, PAREN_EXPR, PLUS_EXPR, POWER_EXPR,
      RATE_EXPR, REF_EXPR, SPECIES_EXPR),
  };

  /* ********************************************************** */
  // AND not_expr
  public static boolean and_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr")) return false;
    if (!nextTokenIs(b, "<expression>", AND)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _LEFT_, AND_EXPR, "<expression>");
    r = consumeToken(b, AND);
    r = r && not_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // identifier "notes" string (SEMI | EOL)
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION, null);
    r = identifier(b, l + 1);
    r = r && consumeTokens(b, 1, NOTES, STRING);
    p = r; // pin = 2
    r = r && annotation_3(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SEMI | EOL
  private static boolean annotation_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_3")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, EOL);
    return r;
  }

  /* ********************************************************** */
  // identifier "is" string (SEMI | EOL)
  public static boolean annotation_is(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_is")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_IS, null);
    r = identifier(b, l + 1);
    r = r && consumeTokens(b, 1, IS, STRING);
    p = r; // pin = 2
    r = r && annotation_is_3(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // SEMI | EOL
  private static boolean annotation_is_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_is_3")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, EOL);
    return r;
  }

  /* ********************************************************** */
  // identifier "." identifier
  public static boolean annotation_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_type")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, ANNOTATION_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // root_item * <<eof>>
  static boolean antimonyFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "antimonyFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = antimonyFile_0(b, l + 1);
    r = r && eof(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // root_item *
  private static boolean antimonyFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "antimonyFile_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!root_item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "antimonyFile_0", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (BACKSLASH EOL)* factor plus_expr *
  public static boolean arithmetic_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arithmetic_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ARITHMETIC_EXPR, "<expression>");
    r = arithmetic_expr_0(b, l + 1);
    r = r && factor(b, l + 1);
    r = r && arithmetic_expr_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (BACKSLASH EOL)*
  private static boolean arithmetic_expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arithmetic_expr_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arithmetic_expr_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arithmetic_expr_0", c)) break;
    }
    return true;
  }

  // BACKSLASH EOL
  private static boolean arithmetic_expr_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arithmetic_expr_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BACKSLASH, EOL);
    exit_section_(b, m, null, r);
    return r;
  }

  // plus_expr *
  private static boolean arithmetic_expr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arithmetic_expr_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!plus_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arithmetic_expr_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // identifier ("in" compartment_id)? "=" expr
  public static boolean assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT, null);
    r = identifier(b, l + 1);
    r = r && assignment_1(b, l + 1);
    r = r && consumeToken(b, EQ);
    p = r; // pin = 3
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ("in" compartment_id)?
  private static boolean assignment_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1")) return false;
    assignment_1_0(b, l + 1);
    return true;
  }

  // "in" compartment_id
  private static boolean assignment_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IN);
    r = r && compartment_id(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier ("in" compartment_id)? ":=" expr
  public static boolean assignment_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_rule")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_RULE, null);
    r = identifier(b, l + 1);
    r = r && assignment_rule_1(b, l + 1);
    r = r && consumeToken(b, ASSIGN_EQ);
    p = r; // pin = 3
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // ("in" compartment_id)?
  private static boolean assignment_rule_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_rule_1")) return false;
    assignment_rule_1_0(b, l + 1);
    return true;
  }

  // "in" compartment_id
  private static boolean assignment_rule_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_rule_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IN);
    r = r && compartment_id(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // arithmetic_expr comparison_op? arithmetic_expr
  public static boolean comparison_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, COMPARISON_EXPR, "<expression>");
    r = arithmetic_expr(b, l + 1);
    r = r && comparison_expr_1(b, l + 1);
    r = r && arithmetic_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // comparison_op?
  private static boolean comparison_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_expr_1")) return false;
    comparison_op(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // EQEQ | NEQ | LT | LTE | GT | GTE
  public static boolean comparison_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_op")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARISON_OP, "<comparison op>");
    r = consumeToken(b, EQEQ);
    if (!r) r = consumeToken(b, NEQ);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LTE);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GTE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ("var" | "const")? "compartment"
  public static boolean compartment_declaration_prefix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compartment_declaration_prefix")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPARTMENT_DECLARATION_PREFIX, "<compartment declaration prefix>");
    r = compartment_declaration_prefix_0(b, l + 1);
    r = r && consumeToken(b, COMPARTMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ("var" | "const")?
  private static boolean compartment_declaration_prefix_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compartment_declaration_prefix_0")) return false;
    compartment_declaration_prefix_0_0(b, l + 1);
    return true;
  }

  // "var" | "const"
  private static boolean compartment_declaration_prefix_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compartment_declaration_prefix_0_0")) return false;
    boolean r;
    r = consumeToken(b, VAR);
    if (!r) r = consumeToken(b, CONST);
    return r;
  }

  /* ********************************************************** */
  // identifier
  public static boolean compartment_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compartment_id")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    exit_section_(b, m, COMPARTMENT_ID, r);
    return r;
  }

  /* ********************************************************** */
  // declaration_prefix? rule_or_assignment ("," rule_or_assignment)* (SEMI | EOL | LINE_COMMENT)
  public static boolean declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECLARATION, "<declaration>");
    r = declaration_0(b, l + 1);
    r = r && rule_or_assignment(b, l + 1);
    r = r && declaration_2(b, l + 1);
    r = r && declaration_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // declaration_prefix?
  private static boolean declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_0")) return false;
    declaration_prefix(b, l + 1);
    return true;
  }

  // ("," rule_or_assignment)*
  private static boolean declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!declaration_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declaration_2", c)) break;
    }
    return true;
  }

  // "," rule_or_assignment
  private static boolean declaration_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && rule_or_assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SEMI | EOL | LINE_COMMENT
  private static boolean declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_3")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, EOL);
    if (!r) r = consumeToken(b, LINE_COMMENT);
    return r;
  }

  /* ********************************************************** */
  // species_declaration_prefix | compartment_declaration_prefix | other_declaration_prefix
  static boolean declaration_prefix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_prefix")) return false;
    boolean r;
    r = species_declaration_prefix(b, l + 1);
    if (!r) r = compartment_declaration_prefix(b, l + 1);
    if (!r) r = other_declaration_prefix(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // identifier EQ expr
  public static boolean event_assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_assignment")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && expr(b, l + 1);
    exit_section_(b, m, EVENT_ASSIGNMENT, r);
    return r;
  }

  /* ********************************************************** */
  // event_assignment ("," (BACKSLASH EOL)* event_assignment)*
  public static boolean event_assignments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_assignments")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = event_assignment(b, l + 1);
    r = r && event_assignments_1(b, l + 1);
    exit_section_(b, m, EVENT_ASSIGNMENTS, r);
    return r;
  }

  // ("," (BACKSLASH EOL)* event_assignment)*
  private static boolean event_assignments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_assignments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!event_assignments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "event_assignments_1", c)) break;
    }
    return true;
  }

  // "," (BACKSLASH EOL)* event_assignment
  private static boolean event_assignments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_assignments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && event_assignments_1_0_1(b, l + 1);
    r = r && event_assignment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (BACKSLASH EOL)*
  private static boolean event_assignments_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_assignments_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!event_assignments_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "event_assignments_1_0_1", c)) break;
    }
    return true;
  }

  // BACKSLASH EOL
  private static boolean event_assignments_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_assignments_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BACKSLASH, EOL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // event_trigger ":" (BACKSLASH EOL)* event_assignments (SEMI | EOL)
  public static boolean event_definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_definition")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = event_trigger(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && event_definition_2(b, l + 1);
    r = r && event_assignments(b, l + 1);
    r = r && event_definition_4(b, l + 1);
    exit_section_(b, m, EVENT_DEFINITION, r);
    return r;
  }

  // (BACKSLASH EOL)*
  private static boolean event_definition_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_definition_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!event_definition_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "event_definition_2", c)) break;
    }
    return true;
  }

  // BACKSLASH EOL
  private static boolean event_definition_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_definition_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BACKSLASH, EOL);
    exit_section_(b, m, null, r);
    return r;
  }

  // SEMI | EOL
  private static boolean event_definition_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_definition_4")) return false;
    boolean r;
    r = consumeToken(b, SEMI);
    if (!r) r = consumeToken(b, EOL);
    return r;
  }

  /* ********************************************************** */
  // "at" expr
  public static boolean event_trigger(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_trigger")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && expr(b, l + 1);
    exit_section_(b, m, EVENT_TRIGGER, r);
    return r;
  }

  /* ********************************************************** */
  // logical_expr | arithmetic_expr
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, EXPR, "<expression>");
    r = logical_expr(b, l + 1);
    if (!r) r = arithmetic_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // primary mul_expr * (BACKSLASH EOL)*
  static boolean factor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = primary(b, l + 1);
    r = r && factor_1(b, l + 1);
    r = r && factor_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // mul_expr *
  private static boolean factor_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!mul_expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "factor_1", c)) break;
    }
    return true;
  }

  // (BACKSLASH EOL)*
  private static boolean factor_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!factor_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "factor_2", c)) break;
    }
    return true;
  }

  // BACKSLASH EOL
  private static boolean factor_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "factor_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, BACKSLASH, EOL);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr (',' expr)*
  public static boolean function_arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_arguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_ARGUMENTS, "<function arguments>");
    r = expr(b, l + 1);
    r = r && function_arguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' expr)*
  private static boolean function_arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_arguments_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!function_arguments_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_arguments_1", c)) break;
    }
    return true;
  }

  // ',' expr
  private static boolean function_arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // function_name '(' function_arguments? ')'
  public static boolean function_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_CALL, null);
    r = function_name(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    p = r; // pin = 2
    r = r && report_error_(b, function_call_2(b, l + 1));
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // function_arguments?
  private static boolean function_call_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_2")) return false;
    function_arguments(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // identifier
  public static boolean function_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_name")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    exit_section_(b, m, FUNCTION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // ID
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // identifier ("in" compartment_id)?
  public static boolean just_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "just_declaration")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && just_declaration_1(b, l + 1);
    exit_section_(b, m, JUST_DECLARATION, r);
    return r;
  }

  // ("in" compartment_id)?
  private static boolean just_declaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "just_declaration_1")) return false;
    just_declaration_1_0(b, l + 1);
    return true;
  }

  // "in" compartment_id
  private static boolean just_declaration_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "just_declaration_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IN);
    r = r && compartment_id(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // species_expr (PLUS species_expr)*
  static boolean list_of_reactants(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "list_of_reactants")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = species_expr(b, l + 1);
    r = r && list_of_reactants_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (PLUS species_expr)*
  private static boolean list_of_reactants_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "list_of_reactants_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!list_of_reactants_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "list_of_reactants_1", c)) break;
    }
    return true;
  }

  // PLUS species_expr
  private static boolean list_of_reactants_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "list_of_reactants_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    r = r && species_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // number_literal unit ?
  public static boolean literal_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_EXPR, "<expression>");
    r = number_literal(b, l + 1);
    r = r && literal_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // unit ?
  private static boolean literal_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_expr_1")) return false;
    unit(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // logical_term or_expr *
  public static boolean logical_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, LOGICAL_EXPR, "<expression>");
    r = logical_term(b, l + 1);
    r = r && logical_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
